<?xml version="1.0"?>
<package format="2">
  <name>ignition_rendering</name>
  <version>0.1.0</version>
  <description>Ignition Gazebo Package</description>
  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>
	
  <depend>ignition_common</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
